# VideoLib

./: .gitignore  CMakeLists.txt  CMakeSettings.json  PCH.h  Test.cpp  Util.cpp  Util.h  VPLib.cpp  VPLib.h  build_win64.bat  deploy_win64.bat
Logger/: ConsoleLogWriter.cpp  ConsoleLogWriter.h  Writer.cpp  Writer.h
src/: Base.h  ConsoleLogWriter.cpp  ConsoleLogWriter.h  D3DUtils.cpp  D3DUtils.h  D3DVideoProcessor.cpp  D3DVideoProcessor.h  LogWriter.cpp  LogWriter.h  Logger.cpp  Logger.h  Player.cpp  Player.h  Test.cpp  Util.cpp  Util.h
